@@ -11,36 +11,38 @@
       <img src="koala.jpg" width="155" height="200">
       <br><br><br>
       <h3>Quick Links</h3>
-      <a href="koala-0.2-src.zip">v0.2 source only</a>
-      <br><a href="koala-0.2-all.zip">v0.2 source + binary</a>
+      <a href="koala-0.3-src.zip">v0.3 source only</a>
+      <br><a href="koala-0.3-all.zip">v0.3 source + binary</a>
       <br>
       <br><a href="change-log.txt">change-log.txt</a>
       <br><a href="README.txt">README.txt</a>
-      <br><a href="doc.html">DSP preliminary doc</a>
+      <br><a href="dsp.html">DSP preliminary doc</a>
     </td>
     <td width="80%" valign="top">
-      <h2>Koala HTTP Server and Template Engine</h2>
-Koala is an HTTP server written in Dylan.  It includes Dylan Server Pages (DSP), 
-a template engine similar to JSP without scriptlets.  But because it is
+      <h2>Koala HTTP Server and Template Engine</h2> Koala is an HTTP
+server written in Dylan.  It includes Dylan Server Pages (DSP), a
+template engine similar to JSP, without scriptlets.  But because it is
 written in Dylan, and can take advantage of Dylan's powerful language
 features, creating web apps in it should be much more concise and
 straightforward than with JSP.
 
-<p>The HTTP server portion of Koala was written mostly by Gail Zacharias.  She
-moved on to other things before it was in a functioning state, so I finished it
-up and added Dylan Server Pages.
+<p>The HTTP server portion of Koala was written mostly by Gail
+Zacharias.  She moved on to other things before it was in a functioning
+state, so I finished it up and added <a href="dsp.html">Dylan Server
+Pages</a> and <a href="http://www.xmlrpc.org">XML-RPC</a>.
 
-<p>The current version is v0.2.  It is provided mostly for the interest and
-amusement of other Dylan programmers and is nowhere near production quality.
-The current version is for Windows only.  I plan to fix this as soon as I can
-by porting to <a href="http://www.gwydiondylan.org/">Gwydion Dylan</a>.  If you
-want to help, let me know!
+<p>The current version is v0.3.  It is provided mostly for the interest
+and amusement of other Dylan programmers and is nowhere near production
+quality.  The current version is for Windows only.  I plan to fix this
+as soon as I can by porting to <a
+href="http://www.gwydiondylan.org/">Gwydion Dylan</a>.  If you want to
+help, let me know!
 
 <p>There is a small demo application included, which shows how to use the
 features of Koala and DSP.
 
 <p>Some <b>very</b> preliminary (and far from complete) documentation on
-DSP is <a href="doc.html">here</a>.
+DSP is <a href="dsp.html">here</a>.
 
 <p>Any and all feedback appreciated.  Send to:
 <br>carlgay [at] attbi [dot] com
